[project]
name = "geodetic-advisor-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "pyproj>=3.7.2",
    "httpx>=0.24.0",
    "streamlit>=1.28.0",
    "pydeck>=0.8",
    "pydantic>=2.0",
    "geojson-pydantic>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.10",
]
